<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_changeBg"
        android:orderInCategory="100"
        android:title="@string/action_change_background"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_points"
        android:orderInCategory="100"
        android:title="@string/points"
        app:showAsAction="never"/>
</menu>