<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:label="@string/app_name"
    android:screenOrientation="portrait">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/background"
    android:background="@drawable/volk0">
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>
    <!--
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        android:scaleY="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454"
        app:srcCompat="@drawable/volk1"
        tools:visibility="gone" />
-->

    <TextView
        android:id="@+id/textAuf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:padding="4dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner"

        android:scrollbars = "vertical"
        android:ellipsize="end"

        android:text="@string/text_on_start"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"/>

       <!-- app:layout_constraintBottom_toTopOf="@+id/main_gen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="38dp"
        android:layout_weight="4"
        android:background="#00FFFFFF"
        android:onClick="openHistory"
        android:scaleX="1.4"
        android:scaleY="1.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAuf"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="15" >
        </Space>
    <ImageButton
        android:id="@+id/toFavorites"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:layout_weight="4"
        android:background="#00FFFFFF"
        android:onClick="addToFavorites"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAuf"
        app:srcCompat="@android:drawable/btn_star" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" >
    </Space>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="5">
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5" >
    </Space>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </Space>

        <Button
            android:id="@+id/main_gen"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="10"
            android:background="@drawable/rounded_corner_btn"

            android:onClick="genTemplate"
            android:text="@string/main_button_name"
            android:textSize="18sp"
            android:textStyle="bold"


            />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </Space>
    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" >
    </Space>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="15" >
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </Space>
    <Button
        android:id="@+id/downvote_btn"
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner_btn"
        android:onClick="downvote"
        android:text="чёт не то"
        />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2" >
        </Space>
    <Button
        android:id="@+id/upvote_btn"
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner_btn"
        android:onClick="playAUF"
        android:text="АУФ "
        />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1">
        </Space>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>